small gap fix

--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,8 @@ footer {
   list-style: none;
   text-align: center;
   margin-left: -2%;
-  padding-bottom: 2%;
+  padding-bottom: 4%;
+  /* margin-bottom: 2%; */
 }
 
 #about_content {
